@@ -1,4 +1,4 @@
-package com.umc.yourun.service.challenge;
+package com.umc.yourun.service;
 
 import com.umc.yourun.config.exception.ErrorCode;
 import com.umc.yourun.config.exception.GeneralException;
@@ -14,7 +14,6 @@ import com.umc.yourun.domain.mapping.UserSoloChallenge;
 import com.umc.yourun.dto.challenge.ChallengeRequest;
 import com.umc.yourun.dto.challenge.ChallengeResponse;
 import com.umc.yourun.repository.*;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -25,7 +24,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Random;
 import java.util.stream.Collectors;
 
 @Service
@@ -38,7 +36,7 @@ public class ChallengeService {
     private final UserSoloChallengeRepository userSoloChallengeRepository;
     private final UserCrewChallengeRepository userCrewChallengeRepository;
     private final UserRepository userRepository;
-    private final ChallengeMatchService challengeMatchService;
+    private final RunningDataRepository runningDataRepository;
 
     // 크루 챌린지 생성
     @Transactional
@@ -73,11 +71,7 @@ public class ChallengeService {
         CrewChallenge crewChallenge = ChallengeConverter.toCrewChallenge(request, period);
         CrewChallenge savedCrewChallenge = crewChallengeRepository.save(crewChallenge);
 
-        UserCrewChallenge userCrewChallenge = UserCrewChallenge.builder()
-                .user(user)
-                .crewChallenge(savedCrewChallenge)
-                .isCreator(true)
-                .build();
+        UserCrewChallenge userCrewChallenge = ChallengeConverter.toUserCrewChallenge(user, savedCrewChallenge, true);
         userCrewChallengeRepository.save(userCrewChallenge);
 
         return savedCrewChallenge.getId();
@@ -115,11 +109,7 @@ public class ChallengeService {
         SoloChallenge savedChallenge = soloChallengeRepository.save(soloChallenge);
 
         // UserSoloChallenge 생성 및 저장
-        UserSoloChallenge userSoloChallenge = UserSoloChallenge.builder()
-                .user(user)
-                .soloChallenge(savedChallenge)
-                .isCreator(true)
-                .build();
+        UserSoloChallenge userSoloChallenge = ChallengeConverter.toUserSoloChallenge(user, savedChallenge, true);
         userSoloChallengeRepository.save(userSoloChallenge);
 
         return savedChallenge.getId();
@@ -203,27 +193,28 @@ public class ChallengeService {
             throw new ChallengeException(ErrorCode.CHALLENGE_EXPIRED);
         }
 
-        // 4. 사용자가 이미 진행 중인 솔로 챌린지가 있는지 확인
-        if (userSoloChallengeRepository.existsByUserIdAndSoloChallenge_ChallengeStatusIn(
-                userId, List.of(ChallengeStatus.IN_PROGRESS))) {
-            throw new ChallengeException(ErrorCode.INVALID_CHALLENGE_JOIN);
-        }
-
-        // 5. 챌린지 생성자 확인
+        // 챌린지 생성자
         UserSoloChallenge creatorChallenge = userSoloChallengeRepository.findBySoloChallengeId(challengeId)
                 .orElseThrow(() -> new ChallengeException(ErrorCode.CHALLENGE_NOT_FOUND));
 
-        // 6. 본인 챌린지 참여 방지
-        if (creatorChallenge.getUser().getId().equals(userId)) {
-            throw new ChallengeException(ErrorCode.CANNOT_JOIN_OWN_CHALLENGE);
+        // 4. 사용자가 이미 진행 중(혹은 대기 중) 인 솔로 챌린지가 있는지 확인
+        if (userSoloChallengeRepository.existsByUserIdAndSoloChallenge_ChallengeStatusIn(
+                userId, Arrays.asList(ChallengeStatus.PENDING, ChallengeStatus.IN_PROGRESS))) {
+
+            // 5. 본인 챌린지 참여 방지
+            if (creatorChallenge.getUser().getId().equals(userId)) {
+                throw new ChallengeException(ErrorCode.CANNOT_JOIN_OWN_CHALLENGE);
+            } else {
+                throw new ChallengeException(ErrorCode.INVALID_CHALLENGE_JOIN);
+            }
+
         }
 
-        // 7. UserSoloChallenge 생성 및 저장
-        UserSoloChallenge userSoloChallenge = UserSoloChallenge.builder()
-                .user(User.builder().id(userId).build())
-                .soloChallenge(soloChallenge)
-                .isCreator(false)
-                .build();
+        // 6. UserSoloChallenge 생성 및 저장
+        UserSoloChallenge userSoloChallenge = ChallengeConverter.toUserSoloChallenge(
+                User.builder().id(userId).build(),
+                soloChallenge,
+                false);
         userSoloChallengeRepository.save(userSoloChallenge);
 
         // 8. 챌린지 상태 업데이트
@@ -234,8 +225,7 @@ public class ChallengeService {
 
     // 크루 챌린지에 참여하기
     @Transactional
-    public ChallengeResponse.CrewChallengeMateRes  joinCrewChallenge(Long challengeId, Long userId) {
-
+    public ChallengeResponse.CrewChallengeMateRes joinCrewChallenge(Long challengeId, Long userId) {
         // 유저 조회
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new GeneralException(ErrorCode.USER_NOT_FOUND));
@@ -244,7 +234,7 @@ public class ChallengeService {
         CrewChallenge crewChallenge = crewChallengeRepository.findById(challengeId)
                 .orElseThrow(() -> new ChallengeException(ErrorCode.CHALLENGE_NOT_FOUND));
 
-        // 2. 챌린지 상태 확인 (해당 챌린지가 이미 진행 중인 챌린지 인지 검사)
+        // 2. 챌린지 상태 확인
         if (crewChallenge.getChallengeStatus() != ChallengeStatus.PENDING) {
             throw new ChallengeException(ErrorCode.INVALID_CHALLENGE_STATUS);
         }
@@ -260,44 +250,40 @@ public class ChallengeService {
             throw new ChallengeException(ErrorCode.CREW_CHALLENGE_FULL);
         }
 
-        // 5. 이미 진행 중인 챌린지가 있는지 확인
-        if (userCrewChallengeRepository.existsByUserIdAndCrewChallenge_ChallengeStatusIn(
-                userId, List.of(ChallengeStatus.IN_PROGRESS))) {
-            throw new ChallengeException(ErrorCode.INVALID_CHALLENGE_JOIN);
-        }
+        // 5. 이미 진행 중인 크루 챌린지가 있는지 확인 및 셀프 참여 방지
+        UserCrewChallenge existUserCrewChallenge = userCrewChallengeRepository
+                .findByUserIdAndCrewChallenge_ChallengeStatusIn(
+                        userId,
+                        Arrays.asList(ChallengeStatus.PENDING, ChallengeStatus.IN_PROGRESS));
 
-        // 6. 이미 진행 중 (혹은 대기) 인 크루 챌린지가 있는지 검사, 셀프 참여 검사
-        if (userCrewChallengeRepository.existsByUserIdAndCrewChallenge_ChallengeStatusIn(
-                userId,
-                Arrays.asList(ChallengeStatus.PENDING, ChallengeStatus.IN_PROGRESS))) {
+        UserCrewChallenge creator = userCrewChallengeRepository
+                .findByCrewChallengeIdAndIsCreator(challengeId, true)
+                .orElseThrow(() -> new ChallengeException(ErrorCode.CHALLENGE_NOT_FOUND));
 
-            UserCrewChallenge userCrewChallenge = userCrewChallengeRepository.findByUserId(userId);
+        if (existUserCrewChallenge != null) {
 
-            // 사용자가 생성자였던 경우
-            if (userCrewChallenge.isCreator()) {
+            if (creator.getUser().getId().equals(userId)) {
                 throw new ChallengeException(ErrorCode.CANNOT_JOIN_OWN_CHALLENGE);
             } else {
                 throw new ChallengeException(ErrorCode.INVALID_CHALLENGE_JOIN);
             }
-
         }
 
-        // 7. UserCrewChallenge 생성 및 저장
-        UserCrewChallenge userCrewChallenge = UserCrewChallenge.builder()
-                .user(userRepository.getReferenceById(userId))
-                .crewChallenge(crewChallenge)
-                .isCreator(false)
-                .build();
+        // 6. UserCrewChallenge 생성 및 저장
+        UserCrewChallenge userCrewChallenge = ChallengeConverter.toUserCrewChallenge(
+                user,
+                crewChallenge,
+                false);
         userCrewChallengeRepository.save(userCrewChallenge);
 
-        // 8. 챌린지 참여자 조회
+        // 7. 챌린지 참여자 조회
         List<Long> participants = userCrewChallengeRepository
                 .findByCrewChallengeIdOrderByCreatedAt(challengeId)
                 .stream()
                 .map(challenge -> challenge.getUser().getId())
                 .collect(Collectors.toList());
 
-        return new ChallengeResponse.CrewChallengeMateRes (challengeId, participants);
+        return new ChallengeResponse.CrewChallengeMateRes(challengeId, participants);
     }
 
     // 크루 챌린지 매칭 화면
@@ -311,12 +297,17 @@ public class ChallengeService {
         // 1. 사용자의 현재 크루 챌린지 참여 정보 조회
         UserCrewChallenge userCrewChallenge = userCrewChallengeRepository
                 .findByUserIdAndCrewChallenge_ChallengeStatusIn(userId,
-                        List.of(ChallengeStatus.PENDING, ChallengeStatus.IN_PROGRESS))
-                .orElseThrow(() -> new ChallengeException(ErrorCode.NO_CREW_CHALLENGE_FOUND));
+                        List.of(ChallengeStatus.PENDING, ChallengeStatus.IN_PROGRESS));
+                // .orElseThrow(() -> new ChallengeException(ErrorCode.NO_CREW_CHALLENGE_FOUND));
+
+        if (userCrewChallenge == null) {
+            throw new GeneralException(ErrorCode.NO_CREW_CHALLENGE_FOUND);
+        }
+
+        // 2. 내 크루원 ID 목록 조회 (참여 순서대로)
 
         CrewChallenge myCrew = userCrewChallenge.getCrewChallenge();
 
-        // 2. 내 크루원 ID 목록 조회 (참여 순서대로)
         List<Long> crewMemberIds = userCrewChallengeRepository
                 .findByCrewChallengeIdOrderByCreatedAt(myCrew.getId())
                 .stream()
@@ -345,8 +336,125 @@ public class ChallengeService {
                 myCrew.getCrewName(),
                 crewMemberIds,
                 matchedCrewName,
-                matchedCrewMemberIds
-        );
+                matchedCrewMemberIds);
+
+    }
+
+    // 홈 화면에서 유저의 챌린지 관련 화면 조회
+    @Transactional(readOnly = true)
+    public ChallengeResponse.HomeChallengeRes getUserChallenges(Long userId) {
+
+        // 유저 조회
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new GeneralException(ErrorCode.USER_NOT_FOUND));
+
+        // 솔로 챌린지 조회
+        UserSoloChallenge userSoloChallenge = userSoloChallengeRepository
+                .findByUserIdAndSoloChallenge_ChallengeStatusIn(
+                        userId,
+                        List.of(ChallengeStatus.PENDING, ChallengeStatus.IN_PROGRESS))
+                .orElse(null);
+
+        // 크루 챌린지 조회 (4명이 결성된 크루일 경우에만)
+        UserCrewChallenge userCrewChallenge = userCrewChallengeRepository
+                .findByUserIdAndCrewChallenge_ChallengeStatusIn(
+                        userId,
+                        List.of(ChallengeStatus.PENDING, ChallengeStatus.IN_PROGRESS));
+
+        // 응답 DTO 생성
+        ChallengeResponse.UserSoloChallengeInfo soloInfo = null;
+        if (userSoloChallenge != null) {
+            SoloChallenge challenge = userSoloChallenge.getSoloChallenge();
+            int soloCountDay = calculateCountDay(challenge.getStartDate());
+
+            // 챌린지 메이트 조회
+            Long mateId = null;
+            if (challenge.getChallengeStatus() == ChallengeStatus.IN_PROGRESS) {
+                mateId = userSoloChallengeRepository
+                        .findBySoloChallengeIdAndUserIdNot(challenge.getId(), userId)
+                        .map(mate -> mate.getUser().getId())
+                        .orElse(null);
+            }
+
+            soloInfo = ChallengeConverter.toUserSoloChallengeInfo(challenge, userId, mateId, soloCountDay);
+        }
+
+        ChallengeResponse.UserCrewChallengeInfo crewInfo = null;
+        if (userCrewChallenge != null) {
+            CrewChallenge challenge = userCrewChallenge.getCrewChallenge();
+            int crewCountDay = calculateCountDay(challenge.getStartDate());
+
+            // 크루원 수 확인
+            long memberCount = userCrewChallengeRepository.countByCrewChallengeId(challenge.getId());
+            if (memberCount == 4) {  // 4명이 모인 크루만 응답
+                List<Long> crewMemberIds = userCrewChallengeRepository
+                        .findByCrewChallengeIdOrderByCreatedAt(challenge.getId())
+                        .stream()
+                        .map(member -> member.getUser().getId())
+                        .collect(Collectors.toList());
+
+                crewInfo = ChallengeConverter.toUserCrewChallengeInfo(challenge, crewMemberIds, crewCountDay);
+            }
+        }
+
+        return new ChallengeResponse.HomeChallengeRes(soloInfo, crewInfo);
+    }
+
+    // 크루원들의 거리 정보 조회가 가능한 크루 챌린지 진행도 (홈 화면 - 크루 챌린지 클릭)
+    public ChallengeResponse.CrewChallengeDetailRes getCrewChallengeDetail (Long userId) {
+
+        // 유저 조회
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new GeneralException(ErrorCode.USER_NOT_FOUND));
+
+        // 1. 유저가 참여 중인 크루 챌린지
+        Long challengeId = userCrewChallengeRepository.findByUserId(userId).getCrewChallenge().getId();
+        CrewChallenge challenge = crewChallengeRepository.findById(challengeId)
+                .orElseThrow(() -> new ChallengeException(ErrorCode.CHALLENGE_NOT_FOUND));
+
+        int challengePeriod = challenge.getChallengePeriod().getDays();
+        String crewName = challenge.getCrewName();
+
+        // 2. 유저가 속한 크루의 크루원들 정보
+        List<ChallengeResponse.CrewMemberInfo> myCrewMembers = userCrewChallengeRepository
+                .findByCrewChallengeIdOrderByCreatedAt(challengeId)
+                .stream()
+                .map(member -> new ChallengeResponse.CrewMemberInfo(
+                        member.getUser().getId(),
+                        calculateTotalDistance(challengeId, member.getUser().getId())
+                ))
+                .toList();
+
+        // 3. 매칭된 크루 정보 조회
+        CrewChallenge matchedCrew = crewChallengeRepository.findById(challenge.getMatchedCrewChallengeId())
+                .orElseThrow(() -> new ChallengeException(ErrorCode.CHALLENGE_NOT_FOUND));
+
+        String matchedCrewName = matchedCrew.getCrewName();
+        List<Long> matchedCrewMemberIds = userCrewChallengeRepository
+                .findByCrewChallengeIdOrderByCreatedAt(matchedCrew.getId())
+                .stream()
+                .map(uc -> uc.getUser().getId())
+                .toList();
+
+        // 4. 크루들의 총 달성 거리 계산
+        int myCrewTotalDistance = myCrewMembers.stream()
+                .mapToInt(ChallengeResponse.CrewMemberInfo::runningDistance)
+                .sum();
+
+        int matchedCrewTotalDistance = matchedCrewMemberIds.stream()
+                .mapToInt(memberId -> calculateTotalDistance(challenge.getMatchedCrewChallengeId(), memberId))
+                .sum();
+
+        // 5. 진행률 계산 (우리 크루의 달성 비율)
+        double progressRatio = 0.0;
+        int totalDistance = myCrewTotalDistance + matchedCrewTotalDistance;
+        if (totalDistance > 0) {
+            progressRatio = (double) myCrewTotalDistance / totalDistance * 100;
+        }
+
+        return new ChallengeResponse.CrewChallengeDetailRes(challengePeriod, crewName, myCrewMembers,
+                matchedCrewName, matchedCrewMemberIds, progressRatio);
+
     }
 
     // 크루 이름 검사
@@ -391,5 +499,30 @@ public class ChallengeService {
 
         return ChallengePeriod.from(period);  // 기간 반환
     }
+
+    // 챌린지 며칠째 진행 중인지
+    private int calculateCountDay(LocalDate startDate) {
+        return (int) ChronoUnit.DAYS.between(startDate, LocalDate.now()) + 1;
+    }
+
+    // 크루원들이 달린 거리 계산
+    private int calculateTotalDistance(Long challengeId, Long userId) {
+        // 1. 챌린지 기간 조회
+        CrewChallenge challenge = crewChallengeRepository.findById(challengeId)
+                .orElseThrow(() -> new ChallengeException(ErrorCode.CHALLENGE_NOT_FOUND));
+
+        // 2. 시작일의 시작(00:00:00)과 현재 시간 설정
+        LocalDateTime periodStart = challenge.getStartDate().atStartOfDay();
+        LocalDateTime currentTime = LocalDateTime.now();
+
+        // 3. 챌린지가 아직 시작되지 않았다면 0 반환
+        if (currentTime.isBefore(periodStart)) {
+            return 0;
+        }
+
+        // 4. 해당 기간 동안의 총 러닝 거리 조회
+        return runningDataRepository.sumDistanceByUserIdAndPeriod(userId, periodStart, currentTime);
+    }
+
 
 }
